// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should render correctly with  1`] = `
<div
  className="sc-bgqQcB iXGPpo"
>
   alert
</div>
`;

exports[`Alert component should render correctly with center 1`] = `
<div
  className="sc-bgqQcB iXGPpo"
>
  center
   alert
</div>
`;

exports[`Alert component should render correctly with danger 1`] = `
<div
  className="sc-bgqQcB bovuYu"
>
  This is a 
  danger
   alert
</div>
`;

exports[`Alert component should render correctly with info 1`] = `
<div
  className="sc-bgqQcB iXGPpo"
>
  This is a 
  info
   alert
</div>
`;

exports[`Alert component should render correctly with left 1`] = `
<div
  className="sc-bgqQcB clnrFE"
>
  left
   alert
</div>
`;

exports[`Alert component should render correctly with right 1`] = `
<div
  className="sc-bgqQcB fDFLn"
>
  right
   alert
</div>
`;

exports[`Alert component should render correctly with success 1`] = `
<div
  className="sc-bgqQcB dWitzK"
>
  This is a 
  success
   alert
</div>
`;

exports[`Alert component should render correctly with warning 1`] = `
<div
  className="sc-bgqQcB kCNkTL"
>
  This is a 
  warning
   alert
</div>
`;
